--- a/home.html
+++ b/home.html
@@ -47,16 +47,16 @@
 </br>
 I've analyzed Amazon Reviews of Baby Products to answer two questions:
 <ul>
-<li><b>Q1.</b> Are there any relationship between length of the reviews and the helpfulness scores given by users</li>
-<li><b>Q2.</b> Are there any relationship between review scores and the helfulness scores given by users</li>
+<li><b>Q1.</b> Are there any relationship between length of the reviews and the helpfulness scores given by users?</li>
+<li><b>Q2.</b> Are there any relationship between review scores and the helpfulness scores given by users?</li>
 </ul>
-In order to find out which features are affecting the helfulness score, we can perform a regression analysis and findout whether length of the reviews or review scores can predict helpfulness.
+In order to find out which features are affecting the helpfulness score, we can perform a regression analysis and find out whether length of the reviews or review scores can predict helpfulness.
 However, for the purpose of this challenge and because I was asked to deliver plots, I've decided to answer the above two questions by inspecting some graphs.
 The visual inspection is usually the first step in a complete data analysis process, but it should be enough to demonstrate my skills for the purpose of this challenge.
 <br />
 <br />
 <h3>Q1</h3>
-Helpfulness score in amazon reviews consists of two numbers [x, y], where x is the number of people who found the review helpful and y is the total number of people who voted for helpfulness of the review.
+Helpfulness score in amazon reviews consists of two numbers [x, y], where x is the number of people who found the review helpful and y is the total number of people who voted for helpfulness or unhelpfulness of the review.
 Let's first compute a helpfulness percentage by dividing x/y. Then we need to compute the length of the review (excluding stop words and punctuations).
 Now we can plot the helpfulness percentage on the y axis and review length on the x axis as shown below.
 <div><img class="plot" src="plot1.png" alt="helpfulness-length" /></div>
@@ -76,8 +76,7 @@ There are so many data points and visually there is not much variety in the help
 Now let's compare average helpfulness percentage for each overall score.
 <div><img class="plot" src="plot4.png" alt="helpfulness-length" /></div>
 <br />
-Again, it looks like there is not much difference in average helpfulness percentage (the range changes between 0.6 to 0.8).
-Therefore, visually we did not find any indication that helpfulness percentage and overall score are related. But, interestingly as overall score increases more people find reviews helpful on average.
+Interestingly as overall score increases more people find reviews helpful on average.
 </div>
 <div style="clear: both;"> </div>
 
