--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@ There are so many data points and visually there is not much variety in the help
 Now let's compare average helpfulness percentage for each overall score.
 <div><img class="plot" src="plot4.png" alt="helpfulness-length" /></div>
 <br />
-Interestingly as overall score increases more people find reviews helpful on average.
+Interestingly as overall score increases more people find reviews helpful on average. But, more analysis needs to be done to find out if this increase is significant.
 </div>
 <div style="clear: both;"> </div>
 
